query_plan/src/snapshots/tailcall__query_plan__tests__PostAndUser_execution_plan.snap
---
source: src/query_plan/tests.rs
expression: execution_plan
---
Parallel:
    Sequential:
        Resolve(0)
        Resolve(1)
    Resolve(6)
