query_plan/src/snapshots/tailcall__query_plan__tests__PostAndUser_execution_result.snap
---
source: src/query_plan/tests.rs
expression: execution_result
---
{
    Id(
        0,
    ): Single(
        Ok(
            Object(
                {
                    Name(
                        "userId",
                    ): Number(
                        Number(1),
                    ),
                    Name(
                        "id",
                    ): Number(
                        Number(3),
                    ),
                    Name(
                        "title",
                    ): String(
                        "ea molestias quasi exercitationem repellat qui ipsa sit aut",
                    ),
                    Name(
                        "body",
                    ): String(
                        "et iusto sed quo iure\nvoluptatem occaecati omnis eligendi aut ad\nvoluptatem doloribus vel accusantium quis pariatur\nmolestiae porro eius odio et labore et velit aut",
                    ),
                },
            ),
        ),
    ),
    Id(
        1,
    ): Single(
        Ok(
            Object(
                {
                    Name(
                        "id",
                    ): Number(
                        Number(1),
                    ),
                    Name(
                        "name",
                    ): String(
                        "Leanne Graham",
                    ),
                    Name(
                        "username",
                    ): String(
                        "Bret",
                    ),
                    Name(
                        "email",
                    ): String(
                        "Sincere@april.biz",
                    ),
                    Name(
                        "address",
                    ): Object(
                        {
                            Name(
                                "street",
                            ): String(
                                "Kulas Light",
                            ),
                            Name(
                                "suite",
                            ): String(
                                "Apt. 556",
                            ),
                            Name(
                                "city",
                            ): String(
                                "Gwenborough",
                            ),
                            Name(
                                "zipcode",
                            ): String(
                                "92998-3874",
                            ),
                            Name(
                                "geo",
                            ): Object(
                                {
                                    Name(
                                        "lat",
                                    ): String(
                                        "-37.3159",
                                    ),
                                    Name(
                                        "lng",
                                    ): String(
                                        "81.1496",
                                    ),
                                },
                            ),
                        },
                    ),
                    Name(
                        "phone",
                    ): String(
                        "1-770-736-8031 x56442",
                    ),
                    Name(
                        "website",
                    ): String(
                        "hildegard.org",
                    ),
                    Name(
                        "company",
                    ): Object(
                        {
                            Name(
                                "name",
                            ): String(
                                "Romaguera-Crona",
                            ),
                            Name(
                                "catchPhrase",
                            ): String(
                                "Multi-layered client-server neural-net",
                            ),
                            Name(
                                "bs",
                            ): String(
                                "harness real-time e-markets",
                            ),
                        },
                    ),
                },
            ),
        ),
    ),
    Id(
        6,
    ): Single(
        Ok(
            Object(
                {
                    Name(
                        "id",
                    ): Number(
                        Number(2),
                    ),
                    Name(
                        "name",
                    ): String(
                        "Ervin Howell",
                    ),
                    Name(
                        "username",
                    ): String(
                        "Antonette",
                    ),
                    Name(
                        "email",
                    ): String(
                        "Shanna@melissa.tv",
                    ),
                    Name(
                        "address",
                    ): Object(
                        {
                            Name(
                                "street",
                            ): String(
                                "Victor Plains",
                            ),
                            Name(
                                "suite",
                            ): String(
                                "Suite 879",
                            ),
                            Name(
                                "city",
                            ): String(
                                "Wisokyburgh",
                            ),
                            Name(
                                "zipcode",
                            ): String(
                                "90566-7771",
                            ),
                            Name(
                                "geo",
                            ): Object(
                                {
                                    Name(
                                        "lat",
                                    ): String(
                                        "-43.9509",
                                    ),
                                    Name(
                                        "lng",
                                    ): String(
                                        "-34.4618",
                                    ),
                                },
                            ),
                        },
                    ),
                    Name(
                        "phone",
                    ): String(
                        "010-692-6593 x09125",
                    ),
                    Name(
                        "website",
                    ): String(
                        "anastasia.net",
                    ),
                    Name(
                        "company",
                    ): Object(
                        {
                            Name(
                                "name",
                            ): String(
                                "Deckow-Crist",
                            ),
                            Name(
                                "catchPhrase",
                            ): String(
                                "Proactive didactic contingency",
                            ),
                            Name(
                                "bs",
                            ): String(
                                "synergize scalable supply-chains",
                            ),
                        },
                    ),
                },
            ),
        ),
    ),
}
