query_plan/src/snapshots/tailcall__query_plan__tests__User_operation_plan.snap
---
source: src/query_plan/tests.rs
expression: operation_plan
---
OperationPlan
    fields:
        user(by 6)
            name
            email

    selections:
        Resolver(6):
                name
                email
